Add article on the Server Scaffold

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "files.exclude": {
     "project/target/": "explorerExcludedFiles",
-    "target/": "explorerExcludedFiles"
+    "target/": "explorerExcludedFiles",
+    "ensime-langserver.log": "explorerExcludedFiles",
+    "pc.stdout.log": "explorerExcludedFiles"
   }
 }
