Make post 3 literate
- Set up literate programming framework using lmt
- Create appendix directory for file templates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.exclude": {
+    "go/": "explorerExcludedFiles",
     "project/target/": "explorerExcludedFiles",
     "target/": "explorerExcludedFiles",
     "ensime-langserver.log": "explorerExcludedFiles",
